<resources>
    <string name="app_name">Jemmi</string>
    <string name="user_name">User Name</string>
    <string name="default_message">Hey there, I\'m using Jemmi app.</string>
    <string name="send_chat_request">Send Chat Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="decrypt">Decrypt</string>
    <string name="enter_message_number">Enter Message Number</string>
    <string name="enter_key">Enter key</string>
    <string name="the_decrypt_message_is">The Decrypt Message is:</string>
    <string name="decrypt_with_rsa">Decrypt with RSA</string>
    <string name="decrypt_with_key">Decrypt with Key</string>
    <string name="name">Name</string>
    <string name="enter_your_key">Enter Your Key:</string>
    <string name="encrypt">Encrypt</string>
    <string name="main_screen_picture">Main screen picture</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="or_login_using_your">or Login Using Your</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_verification_code_here">Enter Verification Code Here</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
    <string name="sign_up_photo">Sign up photo</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="hey_i_m_available">Hey, I\'m Available.</string>
    <string name="update">Update</string>
    <string name="display_user_name">Display User Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="receiver_message">Receiver Message</string>
    <string name="sender_message">Sender Message</string>
    <string name="online_status">Online Status</string>
    <string name="user_status">User Status</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
</resources>
