<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="6dp"
                    />
                <ImageView
                    android:id="@+id/user_online_status"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/online"
                    android:visibility="invisible"
                    android:contentDescription="@string/online_status" />
            </LinearLayout>

            <TextView
                android:id="@+id/user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_status"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:layout_marginStart="6dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/request_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/accept"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@android:color/holo_green_light"
                    android:visibility="invisible"
                    android:layout_marginStart="6dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/request_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/cancel"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/background_light"
                    android:visibility="invisible"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>