<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".ChatActivity">

    <include
        android:id="@+id/chat_toolbar"
        layout="@layout/app_bar_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/private_message_list_of_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/chat_toolbar"
        android:layout_above="@+id/chat_linear_layout"

        />

    <LinearLayout
        android:id="@+id/chat_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/input_message"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message"
            android:padding="15dp"
            android:autofillHints="@string/enter_message"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/send_message_btn"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/send_message"
            android:contentDescription="@string/send" />

        <ImageButton
            android:id="@+id/decrypte"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:src="@drawable/decrypt"
            android:contentDescription="@string/decrypt" />


    </LinearLayout>

</RelativeLayout>